# vpp-portmirroring

./: vpp-api-python-workaround.sh
plugins/: Makefile.am  configure.ac
plugins/portmirroring-plugin/: Makefile.am  configure.ac
plugins/portmirroring-plugin/portmirroring/: api.c  port_mirroring.c  port_mirroring.h  port_mirroring_in_node.c  port_mirroring_out_node.c  portmirroring.api
vnet/vnet/l2/: l2_output_classify.c
